--- a/Templates/matakuliah/tambah-matakuliah.html
+++ b/Templates/matakuliah/tambah-matakuliah.html
@@ -57,29 +57,40 @@
           <select
             name="programstudi"
             class="form-select"
-            aria-label="Default select example">
-            <option selected disabled>-- Program Studi --</option>
+            aria-label="Default select example"
+          >
+            <option selected>-- Program Studi --</option>
             <option value="Teknik Informatika">Teknik Informatika</option>
             <option value="Geomatika">Geomatika</option>
-            <option value="Teknik Rekayasa Multimedia">Teknik Rekayasa Multimedia</option>
-            <option value="Teknik Rekayasa Keamanan Siber">Rekayasa Keamanan Siber</option>
-            <option value="Teknik Rekayasa Perangkat Lunak">Teknik Rekayasa Perangkat Lunak</option>
+            <option value="Teknik Rekayasa Multimedia">
+              Teknik Rekayasa Multimedia
+            </option>
+            <option value="Teknik Rekayasa Keamanan Siber">
+              Rekayasa Keamanan Siber
+            </option>
+            <option value="Teknik Rekayasa Perangkat Lunak">
+              Teknik Rekayasa Perangkat Lunak
+            </option>
             <option value="Animasi">Animasi</option>
           </select>
         </div>
         <div class="mb-3">
           <label for="semester" class="form-label">Semester</label>
           <!-- <input type="text" class="form-control" name="programstudi" placeholder="Program Studi" /> -->
-          <select name="semester" class="form-select" aria-label="Default select example">
-            <option selected disabled>-- Semester --</option>
-            <option value="Semester 1">Semester 1</option>
-            <option value="Semester 2">Semester 2</option>
-            <option value="Semester 3">Semester 3</option>
-            <option value="Semester 4">Semester 4</option>
-            <option value="Semester 5">Semester 5</option>
-            <option value="Semester 6">Semester 6</option>
-            <option value="Semester 7">Semester 7</option>
-            <option value="Semester 8">Semester 8</option>
+          <select
+            name="semester"
+            class="form-select"
+            aria-label="Default select example"
+          >
+            <option selected>-- Semester --</option>
+            <option value="1">Semester 1</option>
+            <option value="2">Semester 2</option>
+            <option value="3">Semester 3</option>
+            <option value="4">Semester 4</option>
+            <option value="5">Semester 5</option>
+            <option value="6">Semester 6</option>
+            <option value="7">Semester 7</option>
+            <option value="8">Semester 8</option>
           </select>
         </div>
         <button class="btn btn-primary btn-block">Tambah</button>
