--- a/Templates/login.html
+++ b/Templates/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
 
 </head>
-<body style="background-image= {{ url_for('static', filename='images/header.jpg') }}" />
+<body style="background-image: {{ url_for('static', filename='images/header.jpg') }}" />
 
 <div class="container mt-5">
     <div class="row justify-content-center">
