--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,6 +1,50 @@
 body {
-  background-image: url_for("static", filename= "images/header.jpg");
-  background-image: url("/static/images/header.jpg");
+  background-image: url("/static/images/poltek.jpeg");
+  height: 15rem;
+  margin-top: 150px;
+  margin-bottom: 20rem;
   background-size: cover;
   background-position: center;
+}
+
+h3{
+  color: rgb(21, 21, 4);
+  text-align: center;
+  margin-top: -3rem;
+  margin-bottom: 3rem;
+}
+
+.btn {
+  width: 115px;
+  height: 42px;
+  cursor: pointer;
+  color: #fff;
+  font-size: 17px;
+  border-radius: 1rem;
+  border: none;
+  position: relative;
+  background: #100720;
+  transition: 0.1s;
+  
+}
+
+.btn::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(circle farthest-corner at 10%,20%, rgba(255 ,94 ,247 ,1) 17.8%, rgba(2 ,245 ,255 ,1) 100.2%);
+  filter: blur(15px);
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+
+.btn:hover {
+  transform: scale(0.9) rotate(3deg);
+  background-color: linear-gradient(to right, rgba(255,94,247,1)1,rgba(2,245,255,1));
+  transition: 0.5s;
+  background:#0d8db184;
+  
 }
