udah selesai login&semesternya

--- a/Templates/matakuliah/data-kuliah-prodi/main.html
+++ b/Templates/matakuliah/data-kuliah-prodi/main.html
@@ -38,6 +38,7 @@
             <td>Deskripsi </td>
             <td>SKS</td>
             <td>Program Studi</td>
+            <td>Semester</td>
             <td>Aksi</td>
           </tr>
         </thead>
