--- a/Templates/matakuliah/data-kuliah-prodi/matkul.html
+++ b/Templates/matakuliah/data-kuliah-prodi/matkul.html
@@ -8,6 +8,7 @@ path == '/matakuliah/IF' %}
     <td>{{item.2}}</td>
     <td>{{item.3}}</td>
     <td>{{item.4}}</td>
+    <td>{{item.5}}</td>
 
     <td>
       <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"
@@ -33,6 +34,7 @@ path == '/matakuliah/IF' %}
     <td>{{item.2}}</td>
     <td>{{item.3}}</td>
     <td>{{item.4}}</td>
+    <td>{{item.5}}</td>
 
     <td>
       <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"
@@ -58,6 +60,7 @@ path == '/matakuliah/IF' %}
     <td>{{item.2}}</td>
     <td>{{item.3}}</td>
     <td>{{item.4}}</td>
+    <td>{{item.5}}</td>
 
     <td>
       <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"
@@ -83,6 +86,7 @@ path == '/matakuliah/IF' %}
     <td>{{item.2}}</td>
     <td>{{item.3}}</td>
     <td>{{item.4}}</td>
+    <td>{{item.5}}</td>
 
     <td>
       <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"
@@ -108,6 +112,7 @@ path == '/matakuliah/IF' %}
     <td>{{item.2}}</td>
     <td>{{item.3}}</td>
     <td>{{item.4}}</td>
+    <td>{{item.5}}</td>
 
     <td>
       <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"
@@ -133,6 +138,7 @@ path == '/matakuliah/IF' %}
     <td>{{item.2}}</td>
     <td>{{item.3}}</td>
     <td>{{item.4}}</td>
+    <td>{{item.5}}</td>
 
     <td>
       <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"
