--- a/Templates/matakuliah/ubah-matakuliah.html
+++ b/Templates/matakuliah/ubah-matakuliah.html
@@ -75,14 +75,14 @@
           /> -->
           <select name="semester" class="form-select" aria-label="Default select example">
             <option selected disabled>-- Semester --</option>
-            <option value=1 {{ 'selected' if contact.4 =='semester1' else '' }}>Semester 1</option>
-            <option value=2 {{ 'selected' if contact.4 =='semester2' else '' }}>Semester 2</option>
-            <option value=3 {{ 'selected' if contact.4 =='semester3' else '' }}>Semester 3</option>
-            <option value=4 {{ 'selected' if contact.4 =='semester4' else '' }}>Semester 4</option>
-            <option value=5 {{ 'selected' if contact.4 =='semester5' else '' }}>Semester 5</option>
-            <option value=6 {{ 'selected' if contact.4 =='semester6' else '' }}>Semester 6</option>
-            <option value=7 {{ 'selected' if contact.4 =='semester7' else '' }}>Semester 7</option>
-            <option value=8 {{ 'selected' if contact.4 =='semester8' else '' }}>Semester 8</option>
+            <option value="1" {{ 'selected' if contact.5 ==1 else '' }}>Semester 1</option>
+            <option value="2" {{ 'selected' if contact.5 ==2 else '' }}>Semester 2</option>
+            <option value="3" {{ 'selected' if contact.5 ==3 else '' }}>Semester 3</option>
+            <option value="4" {{ 'selected' if contact.5 ==4 else '' }}>Semester 4</option>
+            <option value="5" {{ 'selected' if contact.5 ==5 else '' }}>Semester 5</option>
+            <option value="6" {{ 'selected' if contact.5 ==6 else '' }}>Semester 6</option>
+            <option value="7" {{ 'selected' if contact.5 ==7 else '' }}>Semester 7</option>
+            <option value="8" {{ 'selected' if contact.5 ==8 else ''}}>Semester 8</option>
         </select>
         </div>
         <div class="mb-3">
