--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,17 +1,32 @@
 body {
-  background-image: url("/static/images/poltek.jpeg");
+  background: linear-gradient(
+    to right,
+    rgba(255, 94, 247, 1),
+    rgba(2, 245, 255, 1)
+  );
   height: 15rem;
   margin-top: 150px;
   margin-bottom: 20rem;
   background-size: cover;
   background-position: center;
+  color: rgb(3, 0, 0);
 }
 
-h3{
-  color: rgb(21, 21, 4);
+.display-3 {
+  color: rgb(234, 234, 230);
   text-align: center;
   margin-top: -3rem;
   margin-bottom: 3rem;
+  font-style: bold;
+  font-size: 70px;
+}
+
+.card {
+  background-color: rgba(240, 248, 255, 0.39);
+}
+
+.card input {
+  background-color: rgba(240, 248, 255, 0.97);
 }
 
 .btn {
@@ -25,14 +40,17 @@ h3{
   position: relative;
   background: #100720;
   transition: 0.1s;
-  
 }
 
 .btn::after {
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
-  background: linear-gradient(circle farthest-corner at 10%,20%, rgba(255 ,94 ,247 ,1) 17.8%, rgba(2 ,245 ,255 ,1) 100.2%);
+  background: linear-gradient(
+    to right,
+    rgba(255, 94, 247, 1) 17.8%,
+    rgba(2, 245, 255, 1) 100.2%
+  );
   filter: blur(15px);
   z-index: -1;
   position: absolute;
@@ -40,11 +58,13 @@ h3{
   top: 0;
 }
 
-
 .btn:hover {
   transform: scale(0.9) rotate(3deg);
-  background-color: linear-gradient(to right, rgba(255,94,247,1)1,rgba(2,245,255,1));
+  background: linear-gradient(
+    to right,
+    rgba(255, 94, 247, 1),
+    rgba(2, 245, 255, 1)
+  );
+  background-size: 100%;
   transition: 0.5s;
-  background:#0d8db184;
-  
 }
