--- a/Templates/mahasiswa/data-mahasiswa.html
+++ b/Templates/mahasiswa/data-mahasiswa.html
@@ -3,7 +3,7 @@
 
   <h2 class="display-6">Manajemen Data Mahasiswa</h2>
   <hr>
-  <a href="/mahasiswa/tambah" class="btn btn-warning mb-4 mt-2"><i class="fa-solid fa-plus"></i> Tambah Mahasiswa</a>
+  <a href="/mahasiswa/tambah" class="btn btn-info mb-4 mt-2"><i class="fa-solid fa-plus"></i> Tambah Mahasiswa</a>
 
   <div class="row">
   
@@ -16,7 +16,11 @@
     <div class="col-md-12">
       <table class="table table-striped text-center">
         <thead>
-          <tr class="bg-secondary text-white">
+          <tr class="bg-secondary text-white" style="background: linear-gradient(
+    to left,
+    rgba(203, 109, 198, 0.854),
+    rgb(21, 153, 201)
+  );">
             <td>KODE</td>
             <td>NIM</td>
             <td>Nama Lengkap </td>
