--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>SIK WEBAPP</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+                <link rel="stylesheet" href="{{ url_for('static', filename='css/matkul.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 
         <!-- font awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     </head>
     <body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: linear-gradient(to right, rgba(255, 94, 247, 1), rgba(2, 245, 255, 1));">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <h2 class="text-white fw-bold">SIM</h2>
